--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,8 +34,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": "d:/C++ Coding/c++/Classes and Objects/Implementing member methods 2",
-      "program": "d:/C++ Coding/c++/Classes and Objects/Implementing member methods 2/build/Debug/outDebug",
+      "cwd": ".",
+      "program": "build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
